Fix stickymenu visibility and add cypress test (#642)

--- a/frontend/packages/volto-light-theme/src/theme/sticky-menu.scss
+++ b/frontend/packages/volto-light-theme/src/theme/sticky-menu.scss
@@ -1,3 +1,7 @@
+body.cms-ui .sticky-menu {
+  display: none;
+}
+
 .sticky-menu {
   position: fixed;
   z-index: 11;
